syntax = "proto3";
package xavierlepretre.checkers.checkers;

option go_package = "github.com/xavierlepretre/checkers/x/checkers/types";

message NextGame {
  string creator = 1;
  uint64 idValue = 2; 
}
